# Ragstudy

./: .env.example  .gitignore  CODE_NOTES.md  PROJECT_REPORT.md  README.md  answer_demo.py  config_demo.py  history.md  llm_config_demo.py  main.py  pyproject.toml  query_demo.py  rag_chain.py  rag_service.py
Data/: encryption.key  rag.db
Data/docs/: rag_intro.md  usage_guide.txt
api/: __init__.py  app.py  schemas.py
data_loader/: __init__.py  config.py  loader.py
data_splitter/: __init__.py  config.py  splitter.py
embedding/: __init__.py  config.py  crud.py  database.py  downloader.py  factory.py  manager.py  models.py  providers.py  schema.py
llm/: __init__.py  config.py  crud.py  env.py  factory.py  manager.py  models.py  providers.py  schema.py
tests/: manual_logic_check.py  test_api.py  test_data_loader.py  test_embedding_schema.py  test_llm_schema.py  test_rag_chain.py  test_splitter.py  test_vector_store_metadata.py
vector_store/: __init__.py  config.py  store.py
web/: __init__.py  streamlit_app.py
