[project]
name = "rag"
version = "0.1.0"
description = "基于 LangChain 的 RAG（检索增强生成）文档加载管线"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=1.3.3",
    "sqlalchemy>=2.0.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "huggingface-hub>=0.23.0",
    "markdown>=3.10.2",
    "langchain-chroma>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
